fix for spacing and replaced <br> with newlines

--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -87,7 +87,7 @@ html, body {
 	font-size: 0.8em;
 	background-color: black;
 }
-#commandLine {
+#commandLine, #history {
 	white-space: pre-wrap;
 }
 #command {
